# polybridge-python-client

./: .gitignore  .mailmap  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: README.md
docs/source/: api-reference.rst  changelog.rst  conf.py  examples.rst  index.rst  installation.rst  quickstart.rst  user-guide.rst
examples/: __init__.py  market_catalog.ipynb  query_above_options_timeseries.ipynb  query_updown_metrics.ipynb
polybridge/: __init__.py  client.py  types.py
tests/: __init__.py  test_client.py
